# blackberry

./: .gitignore  .rustfmt.toml  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  Xargo.toml
bootloader/: Cargo.toml
bootloader/src/: bootloader.rs  lang_items.rs
ext/: boot.S  bootloader.ld  layout.ld
pi/: Cargo.toml
pi/src/: gpio.rs  lib.rs  timer.rs  uart.rs
pi/src/atags/: atag.rs  mod.rs  raw.rs
src/: common.rs  console.rs  gpio.rs  kmain.rs  lang_items.rs  mutex.rs  shell.rs  timer.rs  uart.rs
stack-vec/: Cargo.toml
stack-vec/src/: lib.rs
std/: Cargo.toml
std/src/: lib.rs  macros.rs  slice.rs  str.rs
std/src/io/: cursor.rs  error.rs  impls.rs  mod.rs  util.rs
std/src/prelude/: v1.rs
std/src/sync/: mod.rs
ttywrite/: Cargo.toml  Makefile  test.sh
ttywrite/src/: main.rs  parsers.rs
volatile/: Cargo.toml
volatile/src/: lib.rs  macros.rs  traits.rs
xmodem/: Cargo.toml
xmodem/src/: lib.rs  progress.rs  tests.rs
